Suggestion search widget tool hooked up.  When location is selected from list it zooms to location and initiates a map click to display popups for that area. Printing issue partially fixed - issue tracked to synchronous settings on print task.  Issue with printing proxy still to be resolved.  Printing proxy is being bypassed at this stage. Popup zoom to functionality changed to button - no longer automatically zooms to location when cycling through selected features.  Possible issue with stack overflow to be resolved. Search results layer symbology changed from.  Alpha no longer applied to symbol, but now to layer as the transparency wasn't being honoured when printing. Displaying Esri logo and attributation now configurable.

--- a/PropertyMap/css/main.css
+++ b/PropertyMap/css/main.css
@@ -567,16 +567,24 @@ input[type=text]::-ms-clear {
 
 .drawer-menu-container {
     width: 280px;
+    height: 100%;
+}
+
+.drawer-menu-panels {
+    width: 100%;
+    /*height: 100%;*/
 }
 
 .drawer-menu-panels .panel {
     display: none;
     width: 100%;
+    height: 100%;
 }
 
 .drawer-menu-panels .panel-selected {
     display: block;
     width: 100%;
+    /*height: 100%;*/
 }
 
 .drawer-menu-buttons {
@@ -844,6 +852,7 @@ input[type=text]::-ms-clear {
 
     .drawer-menu-container {
         width: 200px;
+        height: 100%;
     }
 }
 
